--- a/carta.html
+++ b/carta.html
@@ -60,7 +60,7 @@
 
         <div class="carta">
             <div class="parag">Meu nome é Matheus Paes de Camargo Vieira e tenho 18 anos. Sou estudante de tecnologia em Análise e Desenvolvimento de Sistemas e tenho uma paixão pelo mundo da programação.</div>
-            <div class="parag">Desde cedo sempre fui fascinado por tecnologia e a forma como ela pode ser usada para resolver problemas e melhorar a vida das pessoas. É por isso que escolhi estudar na área de sistemas e me especializar em programação.</div>
+            <div class="parag">Desde cedo sempre fui fascinado por tecnologia e a forma como ela pode ser usada para resolver problemas e melhorar a vida das pessoas. É por isso que escolhi me especializar em programação.</div>
             <div class="parag">Ao longo dos meus estudos, tenho desenvolvido projetos que me permitiram colocar em prática o que aprendi. Sou uma pessoa proativa, apaixonada pelo aprendizado e sempre busco aprimorar meus conhecimentos na área.</div>
             <div class="parag">Gostaria muito de ter a oportunidade de colocar minhas habilidades e conhecimentos em prática, e acredito que a sua empresa possa me oferecer essa chance. Tenho certeza de que posso contribuir de forma significativa para o crescimento da empresa, e estou animado para fazer parte do time.</div>
             <div class="parag">Agradeço pela atenção e fico à disposição para qualquer dúvida ou esclarecimento adicional.</div>
