Atualizado para apresentar

--- a/Carta de Apresentação/index.html
+++ b/Carta de Apresentação/index.html
@@ -6,24 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carta de Apresentação</title>
 
-    <link rel="stylesheet" href="/css/stylecarta.css">
+    <link rel="stylesheet" href="/Carta de Apresentação/css/style.css">
 
 </head>
 <body class="fundo">
 
     <div class="esquerda"> <!--Parte esquerda da tela contato/foto-->
 
-        <img class="fotoperfil" src="./images/foto curriculo.jpg">
+        <img class="fotoperfil" src="/Carta de Apresentação/image/foto curriculo.jpg">
 
         <div class="social"> 
             <div class="div"> <!--Link para a carta de apresentação-->
-                <a class="btn_cart" href="./index.html">Currículo</a>
+                <a class="btn_cart" href="/Curriculo/index.html">Currículo</a>
             </div>
+
             <br>
+
             <div class="div"> <!--Link para instagram-->
-                <a class="btn_inst" href="https://instagram.com/math__paes?igshid=ZmZhODViOGI=">Instagram</a>
+                <a class="btn_inst" href="https://github.com/MatheusPCV">GitHub</a>
             </div>
+
             <br>
+
             <div class="div"> <!--Link para linkedin-->
                 <a class="btn_link" href="https://www.linkedin.com/in/matheus-paes-de-camargo-vieira-91a605254">Linkedin</a>
             </div>
